# solana-onchain-escrow-engine

./: .gitignore  AUDIT_P2P_IMPROVEMENTS.md  Anchor.toml  Cargo.toml  Guideme.md  README.md  SECURITY.md  SUBMISSION_LINKS.md  feature_roadmap.md  package-lock.json  package.json  product_roadmap.md
client/: example-client.js
docs/: architecture.md  how-it-works.md
docs/diagrams/: system-architecture.mmd
programs/p2p/: Cargo.toml
programs/p2p/src/: lib.rs
tests/: p2p.js
